# BridgeOS

./: .env.example  .gitignore  README.md  amplify.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  system_clock.py
backend/app/agent/: __init__.py  context.py  embeddings.py  engine.py  language.py  llm_client.py  memory.py  (+1 more)
backend/data/: Dataset.csv
backend/scripts/: _heal_bridge_names.py  extend_dataset.py  ingest_real_dataset.py  reembed_memories.py  seed.py  ses_verify_identity.py
backend/tests/: conftest.py  fixtures.py  test_agent_api.py  test_agent_language.py  test_agent_memory.py  test_analytics_api.py  test_aws_bootstrap.py  test_bridges_api.py  test_call_escalation.py  test_caregiver_auto_reply.py  test_caregiver_email_fallback.py  test_caregiver_notifications.py  test_demo_mode.py  test_dispatch_dlq.py  test_dispatch_queue_api.py  test_dispatch_queue_worker.py  test_dispatch_routes_by_channel.py  test_donor_channel_api.py  test_donors_api.py  test_email_api.py  test_email_digest_job.py  test_email_templates.py  test_embeddings_titan.py  test_engine_uses_queue.py  test_event_publishers.py  test_event_subscribers.py  test_events_api.py  test_followup_api.py  test_followup_jobs.py  test_followup_templates.py  test_health.py  test_inbound_email_api.py  test_inbound_email_handler.py  test_inbound_email_poller.py  test_integrations_api.py  test_llm_client_bedrock.py  test_ml_pool_insights.py  test_models.py  test_multilingual_templates.py  test_outreach_api.py  (+32 more)
(+333 files in other folders)
