[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-os-backend"
version = "0.1.0"
description = "Bridge OS — backend API for scaling Blood Warriors' Blood Bridge model"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AlgoWarriors" },
]
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    # ML / Optimization
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "shap>=0.46",
    "ortools>=9.11",
    "numpy>=1.26",
    "pandas>=2.2",
    # Synthetic data
    "faker>=30.0",
    # Integrations
    "httpx>=0.27",
    "twilio>=9.3",
    "boto3>=1.35",  # AWS SDK: Location Service, Bedrock, Secrets Manager, etc.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
